aws/deployments/modules/lambda/security.tf
resource "aws_security_group" "lambda_security_group" {
  name = "lambda_security_group"
  description = "Security Group for Lambda function"
  vpc_id = aws_vpc.my_vpc_id

  ingress = {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 
  ingress = {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 

    egress = {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
